# CotWhitbox

./: .gitignore  CMakeLists.txt  README.md  hitbox.sln
.github/workflows/: Release.yml
DLLInjector/: CMakeLists.txt  DLLInjector.cpp  DLLInjector.h  DLLInjector.vcxproj  DLLInjector.vcxproj.filters  main.cpp  main.hpp
Lua/: CMakeLists.txt  Lua.vcxproj  Lua.vcxproj.filters  lapi.c  lauxlib.c  ldo.c  ldump.c
Proxy/: Proxy.vcxproj  Proxy.vcxproj.filters  README.md  dllmain.cpp
Proxy/LuaExample/: LoadHitbox.lua  ModCheck.lua  SpaceJump.lua
Proxy/LuaExec/: LuaAsm.cpp  LuaAsm.h  LuaExec.cpp  LuaExec.h  LuaExec.hpp  LuaKey.cpp  LuaKey.h  LuaMemory.cpp  LuaMemory.h  LuaMemory.hpp
Proxy/Proxy/: Proxy.cpp  Proxy.h  Proxy.hpp
Proxy/asmjit/: a64.h  arm.h  asmjit.h  core.h  host.h  ujit.h  x86.h
Proxy/asmjit/arm/: a64archtraits_p.h  a64assembler.cpp  a64assembler.h  a64builder.cpp  a64builder.h  a64compiler.cpp  a64compiler.h  a64emithelper.cpp  a64emithelper_p.h  a64emitter.h  a64formatter.cpp  a64formatter_p.h  a64func.cpp  a64func_p.h  a64globals.h  a64instapi.cpp  a64instapi_p.h  a64instdb.cpp  a64instdb.h  a64instdb_p.h  a64operand.cpp  a64operand.h  a64rapass.cpp  a64rapass_p.h  armformatter.cpp  armformatter_p.h  armglobals.h  armutils.h
Proxy/asmjit/core/: api-build_p.h  archcommons.h  archtraits.cpp  archtraits.h  assembler.cpp  assembler.h  builder.cpp  builder.h  builder_p.h  codebuffer.h  codeholder.cpp  codeholder.h  codewriter.cpp  codewriter_p.h  compiler.cpp  compiler.h  compilerdefs.h  constpool.cpp  constpool.h  cpuinfo.cpp  cpuinfo.h  emithelper.cpp  emithelper_p.h  emitter.cpp  emitter.h  emitterutils.cpp  emitterutils_p.h  environment.cpp  environment.h  errorhandler.cpp  errorhandler.h  fixup.h  formatter.cpp  formatter.h  formatter_p.h  func.cpp  func.h  funcargscontext.cpp  funcargscontext_p.h  globals.cpp  (+38 more)
Proxy/asmjit/support/: arena.cpp  arena.h  arenabitset.cpp  arenabitset_p.h  arenahash.cpp  arenahash.h  arenalist.cpp  arenalist.h  arenapool.h  arenastring.h  arenatree.cpp  arenatree.h  arenavector.cpp  arenavector.h  span.h  support.cpp  support.h  support_p.h
Proxy/asmjit/ujit/: ujitbase.h  unicompiler.h  unicompiler_a64.cpp  unicompiler_utils_p.h  unicompiler_x86.cpp  unicondition.h  uniop.h  vecconsttable.cpp  vecconsttable.h
Proxy/asmjit/x86/: x86archtraits_p.h  x86assembler.cpp  x86assembler.h  x86builder.cpp  x86builder.h  x86compiler.cpp  x86compiler.h  x86emithelper.cpp  x86emithelper_p.h  x86emitter.h  x86formatter.cpp  x86formatter_p.h  x86func.cpp  x86func_p.h  x86globals.h  x86instapi.cpp  x86instapi_p.h  x86instdb.cpp  x86instdb.h  x86instdb_p.h  x86opcode_p.h  x86operand.cpp  x86operand.h  x86rapass.cpp  x86rapass_p.h
Proxy/asmtk/: asmparser.cpp  asmparser.h  asmtk.h  asmtokenizer.cpp  asmtokenizer.h  elfdefs.h  globals.h  parserutils.h  strtod.h
Proxy/utils/: Logger.hpp  ProcessInfo.cpp  ProcessInfo.h  searcher.cpp  searcher.h  singleton.hpp
builder/: CMakeLists.txt  builder.vcxproj  main.cpp
hitbox/: README.md  dllmain.cpp  hitbox.vcxproj  hitbox.vcxproj.filters
hitbox/context/: configuration.cpp  configuration.h  description.cpp  description.h
hitbox/controller/: dominator.cpp  dominator.h  renderer.cpp  renderer.h
hitbox/entity/: action.h  attack.h  object.cpp  object.h  objects.h  props.h
hitbox/entry/: d3dx12.h  entry.cpp  entry.h  entry.hpp
hitbox/font/: FontAewsome6.cpp  FontAewsome6.h  FontAwesome6Brands.cpp  FontAwesome6Brands.h  IconsFontAwesome6.inl  IconsFontAwesome6Brands.inl
hitbox/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_truetype.h
hitbox/mapper/: mapper.cpp  mapper.h
hitbox/minhook/src/: hook.c  trampoline.c
hitbox/service/: box.cpp  box.h  dispatcher.cpp  dispatcher.h  runable.cpp  runable.h
hitbox/symbol/: loader.cpp  loader.h
hitbox/unreal_engine/: AActor.h  Array.h  GameInstance.h  Level.h  NameTypes.h  Platform.h  Player.h  SceneComponent.h  TransformVectorized.h  UObject.h  Vector.h  World.h
hitbox/utils/: ProcessInfo.cpp  ProcessInfo.h  graphics.cpp  graphics.h  inirw.cpp  inirw.h  logger.hpp  release.hpp  searcher.cpp  searcher.h
hitbox/view/: control.cpp  control.h  decoration.cpp  decoration.h  scale.cpp  scale.h
launcher/: launcher.vcxproj  launcher.vcxproj.filters  main.cpp
launcher/utils/: MemLoadDll.h  loader.cpp  loader.h  process.cpp  process.h  singletion.hpp
resources/: CotWhitbox.manifest  manifest.rc  resources.rc  version.rc
